# C_VulkanEngine

./: CMakeLists.txt
source/: main.c
source/renderer/: ve_renderer.c  ve_renderer.h
source/shader/: shader.frag  shader.vert  vert.spv
source/utilities/: utilities.h
source/vulkan-backend/: ve_backend.c  ve_backend.h  ve_validation_layer.c  ve_validation_layer.h
ui/: imgui.h  imgui_example_Vuklan_GLFW.cpp
